# Yadonpy

./: .gitignore  CHANGELOG.md  LOG.md  MANIFEST.in  README.md  YADONPY_MAINTENANCE_PRINCIPLES.md  moldb.tar  pyproject.toml  yd_moldb.tar
docs/: API_REFERENCE.md  ARCHITECTURE.md  Manual.md  TECHNICAL_NOTES.md  USER_GUIDE.md  Yadonpy_API_v0.8.40.md  Yadonpy_API_v0.8.41.md  Yadonpy_API_v0.8.42.md  Yadonpy_API_v0.8.43.md  Yadonpy_API_v0.8.44.md  Yadonpy_API_v0.8.45.md  Yadonpy_API_v0.8.46.md  Yadonpy_API_v0.8.47.md  Yadonpy_API_v0.8.48.md  Yadonpy_API_v0.8.49.md  Yadonpy_API_v0.8.50.md  Yadonpy_API_v0.8.51.md  Yadonpy_API_v0.8.52.md  Yadonpy_API_v0.8.53.md  Yadonpy_API_v0.8.54.md  Yadonpy_API_v0.8.55.md  Yadonpy_API_v0.8.56.md  Yadonpy_API_v0.8.57.md  Yadonpy_API_v0.8.58.md  Yadonpy_API_v0.8.59.md  Yadonpy_API_v0.8.60.md  Yadonpy_API_v0.8.61.md  Yadonpy_API_v0.8.62.md  Yadonpy_API_v0.8.63.md  Yadonpy_API_v0.8.64.md  Yadonpy_API_v0.8.65.md  Yadonpy_API_v0.8.66.md  Yadonpy_API_v0.8.67.md  Yadonpy_API_v0.8.68.md  Yadonpy_API_v0.8.69.md  Yadonpy_API_v0.8.70.md  Yadonpy_API_v0.8.71.md  Yadonpy_API_v0.8.72.md  Yadonpy_API_v0.8.73.md  Yadonpy_API_v0.8.74.md  (+9 more)
tests/: conftest.py  test_api.py  test_auto_plot.py  test_benchmark_carbonate_gaff2.py  test_benchmark_carbonate_oplsaa.py  test_benchmarking.py  test_cleanup.py  test_cmcna_benchmark_defaults.py  test_data_dir.py  test_diagnostics.py  test_documentation_coverage.py  test_eg08_z_axis_reference.py  test_engine_runtime_guards.py  test_enhanced_sampling.py  test_eq21_protocol.py  test_eq_plateau_threshold.py  test_forcefields.py  (+33 more)
(+520 files in other folders)
