[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yadonpy"
version = "0.8.104"
description = "SMILES-driven workflow toolkit using GROMACS"
requires-python = ">=3.11"
authors = [{name = "YZC"}]
readme = "README.md"
license = {text = "BSD-3-Clause"}

dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "scipy",
  "packaging",
  "parmed",
  "rdkit>=2025.03.1",
  "mdtraj",
]

[project.optional-dependencies]
accel = ["numba>=0.61"]
qm = []
test = ["pytest>=8"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yadonpy = [
  "ff/ff_dat/*.json",
  "core/pdb/*.pdb",
  "core/data/*.cif",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
